Remove redundant test directive.